--- a/WorldQuantDataScienceModule/assignment1.ipynb
+++ b/WorldQuantDataScienceModule/assignment1.ipynb
@@ -240,6 +240,127 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Exercise 4: Optimize `is_prime`\n",
+    "\n",
+    "You might have noticed that the primality check `is_prime` we developed before is somewhat slow for large numbers. This is because we are doing a ton of extra work checking every possible factor of the tested number. We will use two optimizations to make a `is_prime_fast` function.\n",
+    "\n",
+    "The first optimization takes advantage of the fact that two is the only even prime.  Thus we can check if a number is even and as long as its greater than 2, we know that it is not prime.\n",
+    "\n",
+    "Our second optimization takes advantage of the fact that when checking factors, we only need to check odd factors up to the square root of a number.  Consider a number $n$ decomposed into factors $n=ab$.  There are two cases, either $n$ is prime and without loss of generality, $a=n, b=1$ or $n$ is not prime and $a,b \\neq n,1$.  In this case, if $a > \\sqrt{n}$, then $b<\\sqrt{n}$.  So we only need to check all possible values of $b$ and we get the values of $a$ for free!  This means that even the simple method of checking factors will increase in complexity as a square root compared to the size of the number instead of linearly.\n",
+    "\n",
+    "Lets write the function to do this and check the speed!  `is_prime_fast` will take a number and return whether or not it is prime.\n",
+    "\n",
+    "You will see the functions followed by a cell with an `assert` statement.  These cells should run and produce no output, if they produce an error, then your function needs to be modified.  Do not modify the assert statements, they are exactly as they should be!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def is_prime_fast(number):\n",
+    "    \n",
+    "    if number < 2 and number% 2 == 0:\n",
+    "        return False\n",
+    "    if number == 2:\n",
+    "        return True\n",
+    "    i = 2\n",
+    "    # This will loop from 2 to int(sqrt(x))\n",
+    "    while i*i <= number:\n",
+    "        # Check if i divides x without leaving a remainder\n",
+    "        if number % i == 0:\n",
+    "            # This means that n has a factor in between 2 and sqrt(n)\n",
+    "            # So it is not a prime number\n",
+    "            return False\n",
+    "        i += 1\n",
+    "    # If we did not find any factor in the above loop,\n",
+    "    # then n is a prime number\n",
+    "    return True  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Now lets check the timing, here we will use the `%%timeit` magic which will time the execution of a particular cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "4.94 s ± 116 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "is_prime(67867967)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "1.2 ms ± 26.7 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+    }
+   ],
+   "source": [
+    "%%timeit\n",
+    "is_prime_fast(67867967)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Now return a function which will find all prime numbers up to and including $n$. Submit this function to the grader."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_primes_fast(n):\n",
+    "    return [number for number in range(2, n+1) if is_prime_fast(number)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97]\n"
+    }
+   ],
+   "source": [
+    "print(get_primes_fast(100)) #Prints all prime numbers between 1-100"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
