--- a/WorldQuantDataScienceModule/assignment1.ipynb
+++ b/WorldQuantDataScienceModule/assignment1.ipynb
@@ -361,6 +361,59 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Exercise 5: sieve\n",
+    "\n",
+    "In this problem we will develop an even faster method which is known as the Sieve of Eratosthenes (although it will be more expensive in terms of memory). The Sieve of Eratosthenes is an example of dynamic programming, where the general idea is to not redo computations we have already done (read more about it [here](https://en.wikipedia.org/wiki/Dynamic_programming)).  We will break this sieve down into several small functions. \n",
+    "\n",
+    "Our submission will be a list of all prime numbers less than 2000.\n",
+    "\n",
+    "The method works as follows (see [here](https://en.wikipedia.org/wiki/Sieve_of_Eratosthenes) for more details)\n",
+    "\n",
+    "1. Generate a list of all numbers between 0 and N; mark the numbers 0 and 1 to be not prime\n",
+    "2. Starting with $p=2$ (the first prime) mark all numbers of the form $np$ where $n>1$ and $np <= N$ to be not prime (they can't be prime since they are multiples of 2!)\n",
+    "3. Find the smallest number greater than $p$ which is not marked and set that equal to $p$, then go back to step 2.  Stop if there is no unmarked number greater than $p$ and less than $N+1$\n",
+    "\n",
+    "We will break this up into a few functions, our general strategy will be to use a Python `list` as our container although we could use other data structures.  The index of this list will represent numbers.\n",
+    "\n",
+    "We have implemented a `sieve` function which will find all the prime numbers up to $n$.  You will need to implement the functions which it calls.  They are as follows\n",
+    "\n",
+    "* `list_true` Make a list of true values of length $n+1$ where the first two values are false (this corresponds with step 1 of the algorithm above)\n",
+    "* `mark_false` takes a list of booleans and a number $p$.  Mark all elements $2p,3p,...n$ false (this corresponds with step 2 of the algorithm above)\n",
+    "* `find_next` Find the smallest `True` element in a list which is greater than some $p$ (has index greater than $p$ (this corresponds with step 3 of the algorithm above)\n",
+    "* `prime_from_list` Return indices of True values\n",
+    "\n",
+    "Remember that python lists are zero indexed. We have provided assertions below to help you assess whether your functions are functioning properly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "This is the pseudocode for the Sieve of Eratosthenes .\n",
+    "\n",
+    "\n",
+    "    input: an integer n > 1.\n",
+    "    output: all prime numbers from 2 through n.\n",
+    "\n",
+    "    let A be an array of Boolean values, indexed by integers 2 to n,\n",
+    "    initially all set to true.\n",
+    "    \n",
+    "    for i = 2, 3, 4, ..., not exceeding √n do\n",
+    "        if A[i] is true\n",
+    "            for j = i2, i2+i, i2+2i, i2+3i, ..., not exceeding n do\n",
+    "                A[j] := false\n",
+    "\n",
+    "    return all i such that A[i] is true."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
