--- a/WorldQuantDataScienceModule/assignment1.ipynb
+++ b/WorldQuantDataScienceModule/assignment1.ipynb
@@ -415,6 +415,191 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def list_true(n):\n",
+    "    lst = [False, False]\n",
+    "    for i in range(n-1):\n",
+    "        lst.append(True) \n",
+    "    return lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert len(list_true(20)) == 21\n",
+    "assert list_true(20)[0] is False\n",
+    "assert list_true(20)[1] is False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Now we want to write a function which takes a list of elements and a number $p$ and marks elements false which are in the range $2p,3p ... N$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mark_false(bool_list, p):\n",
+    "    for i in range(2,len(bool_list)):\n",
+    "        if(i*p < len(bool_list)):\n",
+    "            bool_list[i*p] = False\n",
+    "\n",
+    "    return bool_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert mark_false(list_true(6), 2) == [False, False, True, True, False, True, False]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Now lets write a `find_next` function which returns the smallest element in a list which is not false and is greater than $p$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def find_next(bool_list, p):\n",
+    "    for i in range (p+1, len(bool_list)):\n",
+    "        if bool_list[i] == True:\n",
+    "            return i\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert find_next([True, True, True, True], 2) == 3\n",
+    "assert find_next([True, True, True, False], 2) is None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-34-e5227bc8c666>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-34-e5227bc8c666>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    Now given a list of `True` and `False`, return the index of the true values.\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "Now given a list of `True` and `False`, return the index of the true values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prime_from_list(bool_list):\n",
+    "    index_lst = []\n",
+    "    for i in range(len(bool_list)):\n",
+    "        if bool_list[i] == True:\n",
+    "            index_lst.append(i)\n",
+    "    return index_lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert prime_from_list([False, False, True, True, False]) ==  [2, 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sieve(n):\n",
+    "    bool_list = list_true(n)\n",
+    "    p = 2\n",
+    "    while p is not None:\n",
+    "        bool_list = mark_false(bool_list, p)\n",
+    "        p = find_next(bool_list, p)\n",
+    "    return prime_from_list(bool_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert sieve(1000) == get_primes_fast(1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "20.9 ms ± 173 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
+    }
+   ],
+   "source": [
+    "%%timeit \n",
+    "sieve(1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": "710 µs ± 2.25 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+    }
+   ],
+   "source": [
+    "%%timeit \n",
+    "get_primes_fast(1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
